Update repack_server_jre.sh